# opengl-cuda-texture

./: .gitmodules  README.md
Consumer/: CMakeLists.txt  gen_solution.bat
Consumer/src/: main.cpp
Producer/: .gitmodules  CMakeLists.txt
Producer/src/: cuda_texture.cu  main.cpp
res/: default.frag  default.vert
